[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/HUD.gd" type="Script" id=1]
[ext_resource path="res://scenes/InventoryItem.tscn" type="PackedScene" id=2]
[ext_resource path="res://resources/main_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://scenes/CraftingMenu.tscn" type="PackedScene" id=4]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InventoryItems" type="HBoxContainer" parent="Control"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -64.0
margin_right = -767.0
margin_bottom = -64.0
rect_scale = Vector2( 4, 4 )
custom_constants/separation = -1
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InventoryItem" parent="Control/InventoryItems" instance=ExtResource( 2 )]
margin_left = 60.0
margin_right = 76.0
margin_bottom = 16.0

[node name="InventoryItem2" parent="Control/InventoryItems" instance=ExtResource( 2 )]
margin_left = 75.0
margin_right = 91.0
margin_bottom = 16.0

[node name="InventoryItem3" parent="Control/InventoryItems" instance=ExtResource( 2 )]
margin_left = 90.0
margin_right = 106.0
margin_bottom = 16.0

[node name="InventoryItem4" parent="Control/InventoryItems" instance=ExtResource( 2 )]
margin_left = 105.0
margin_right = 121.0
margin_bottom = 16.0

[node name="InventoryItem5" parent="Control/InventoryItems" instance=ExtResource( 2 )]
margin_left = 120.0
margin_right = 136.0
margin_bottom = 16.0

[node name="InventoryItem6" parent="Control/InventoryItems" instance=ExtResource( 2 )]
margin_left = 135.0
margin_right = 151.0
margin_bottom = 16.0

[node name="InventoryItem7" parent="Control/InventoryItems" instance=ExtResource( 2 )]
margin_left = 150.0
margin_right = 166.0
margin_bottom = 16.0

[node name="InventoryItem8" parent="Control/InventoryItems" instance=ExtResource( 2 )]
margin_left = 165.0
margin_right = 181.0
margin_bottom = 16.0

[node name="InventoryItem9" parent="Control/InventoryItems" instance=ExtResource( 2 )]
margin_left = 180.0
margin_right = 196.0
margin_bottom = 16.0

[node name="CraftingMenuButton" type="Button" parent="Control"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -162.976
margin_top = -55.4882
margin_right = -20.9763
margin_bottom = -10.4882
custom_fonts/font = ExtResource( 3 )
text = "Crafting"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CraftingMenu" parent="." instance=ExtResource( 4 )]

[connection signal="pressed" from="Control/CraftingMenuButton" to="." method="_on_CraftingMenuButton_pressed"]
